--- a/frontend/src/assets/css/AdminOrders.css
+++ b/frontend/src/assets/css/AdminOrders.css
@@ -202,3 +202,7 @@ div[style*="overflow-y: auto"]::-webkit-scrollbar-thumb:hover {
     min-width: 110px;
     display: inline-block;
 }
+
+.form-control {
+    width: 540px;
+}
